# routes/user.js
@@ -1,0 +1,7 @@
+const router = require('express').Router();
+const user = require('../controllers/user');
+
+router.get('/', user.getAllUsers)
+
+
+module.exports = router;
