# swagger.json
@@ -1,187 +1,257 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-      "title": "Employee API",
-      "version": "1.0.0",
-      "description": "API for managing the Company's employee"
-    },
-    "paths": {
-      "/employees": {
-        
-        "get": {
-          "summary": "Get all employees",
-          "description" : "API Key if needed : SDS324FGF",
-          "parameters":[
-            {
-                "name": "apiKey",
-                "in": "header",
-                "type": "string"
-            }
+  "openapi": "3.0.0",
+  "info": {
+    "title": "Employee API",
+    "version": "1.0.0",
+    "description": "API for managing the Company's employees"
+  },
 
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful response",
-              "content": {
-                "application/json": {}
-              }
-            },
-            "404": {
-              "description": "No data found"
-            },
-            "500": {
-              "description": "Internal server error"
+  "paths": {
+    "/employees": {
+     
+      "get": {
+        "summary": "Get all employees",
+        "tags":["Employees"],
+        "parameters": [
+          {
+            "name": "apiKey",
+            "in": "header",
+            "description": "API Key: SDS324FGF",
+            "schema": {
+              "type": "string"
             }
           }
-        },
-        "post": {
-            
-          "summary": "Create a new employee",
-          "description": "API Key : SDS324FGF", 
-          "parameters":[
-            
-            {
-                "name": "apiKey",
-                "in": "header",
-                "type": "string"
-            }
-
-          ],
-          "requestBody": {
-          
-            "required": true,
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
             "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/employee"
-                }
-              }
+              "application/json": {}
             }
           },
-          "responses": {
-            "201": {
-              "description": "employee created successfully"
-            },
-            "500": {
-              "description": "Internal server error"
-            }
+          "404": {
+            "description": "No data found"
+          },
+          "500": {
+            "description": "Internal server error"
           }
         }
       },
-      "/employees/{id}": {
-        "get": {
-          "summary": "Get a employee by ID",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
-              "schema": {
-                "type": "string"
-              },
-              "description": "employee ID"
+      "post": {
+        "summary": "Create a new employee",
+        "tags": ["Employees"],
+        "parameters": [
+          {
+            "name": "apiKey",
+            "in": "header",
+            "description": "API Key: SDS324FGF",
+            "schema": {
+              "type": "string"
             }
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful response",
-              "content": {
-                "application/json": {}
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/employee"
               }
-            },
-            "404": {
-              "description": "No data found"
-            },
-            "500": {
-              "description": "Internal server error"
             }
           }
         },
-        "put": {
-          "summary": "Update a employee by ID",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
-              "schema": {
-                "type": "string"
-              },
-              "description": "employee ID"
-            }
-          ],
-          "requestBody": {
-            "description": "Updated employee object",
-            "required": true,
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/employee"
-                }
-              }
-            }
+        "responses": {
+          "201": {
+            "description": "Employee created successfully"
           },
-          "responses": {
-            "204": {
-              "description": "employee updated successfully"
-            },
-            "500": {
-              "description": "Internal server error"
-            }
-          }
-        },
-        "delete": {
-          "summary": "Delete a employee by ID",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
-              "schema": {
-                "type": "string"
-              },
-              "description": "employee ID"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "employee deleted successfully"
-            },
-            "500": {
-              "description": "Internal server error"
-            }
+          "500": {
+            "description": "Internal server error"
           }
         }
       }
     },
-    "components": {
-      "schemas": {
-        "employee": {
-          "type": "object",
-          "properties": {
-            "firstName":{
-                "type":"string"
-            },
-            "lastName": {
-                "type":"string"
-            },
-            "role": {
-                "type":"string"
-            },
-            "salary": {
-                "type": "integer"
-            },
-            "phone": {
-                "type":"integer"
-            },
-            "email": {
-                "type":"string"
-            },
-            "address": {
-                "type":"string"
-            }},
-          "required": ["firstName", "lastName", "role", "email", "address", "phone", "salary"]
+    "/employees/{id}": {
+      "get": {
+        "summary": "NOT IMPLEMENTED YET",
+        "tags": ["Employees"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "Employee ID",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          },
+          "404": {
+            "description": "No data found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "put": {
+        "summary": "NOT IMPLEMENTED YET",
+        "tags": ["Employees"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "Employee ID",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Updated employee object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/employee"
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "Employee updated successfully"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "delete": {
+        "summary": "NOT IMPLEMENTED YET",
+        "tags": ["Employees"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "Employee ID",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Employee deleted successfully"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      
+    }
+    },
+    "/users": {
+      "get": {
+        "summary": "Get all users",
+        "tags": ["Users"],
+        "parameters": [
+          {
+            "name": "apiKey",
+            "in": "header",
+            "description": "API Key: SDS324FGF",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          },
+          "404": {
+            "description": "No data found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a new user | Not Implemented Yet!!",
+        
+        "tags": ["Users"],
+        "parameters": [
+          {
+            "name": "apiKey",
+            "in": "header",
+            "description": "API Key: SDS324FGF",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/employee"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Employee created successfully"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
         }
       }
     }
+  },
+  "components": {
+    "schemas": {
+      "employee": {
+        "type": "object",
+        "properties": {
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string"
+          },
+          "salary": {
+            "type": "integer"
+          },
+          "phone": {
+            "type": "integer"
+          },
+          "email": {
+            "type": "string"
+          },
+          "address": {
+            "type": "string"
+          }
+        },
+        "required": ["firstName", "lastName", "role", "email", "address", "phone", "salary"]
+      }
+    }
   }
+}
